fixed z-index of page search

--- a/_front/src/static/scss/adaptive/header-footer/_header.scss
+++ b/_front/src/static/scss/adaptive/header-footer/_header.scss
@@ -307,6 +307,8 @@
     .mobile-nav{
         width: 100%;
         max-width: 770px;
+
+        z-index: 50;
     }
     
 }
