--- a/_front/src/static/scss/adaptive/pages/_mainPage.scss
+++ b/_front/src/static/scss/adaptive/pages/_mainPage.scss
@@ -318,6 +318,8 @@
         &__icon{
             width: 80px;
             height: 80px;
+            margin-top: 50px;
+            margin-bottom: 10px;
         }
 
     }
